--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -22,7 +22,7 @@
 				<div class="incard transcard" ng-if="t.purchased!='';" >
 					<div class="list">
 						<ion-item class="item item-thumbnail-left listmk">
-							<span class="item-note">{{t.totalpurchase.purchasebalance}}</span>
+							<span class="item-note">{{finalpurchase}}</span>
 							<h2 class="bold">Total</h2>
 						</ion-item>
 						<ion-item class="item item-thumbnail-left"  ng-repeat="tr in t.purchased">
@@ -34,8 +34,7 @@
 								</div>
 								<div class="col-75">
 									<div class="sell-cont trans">
-										<span class="item-note">
-                                         -{{tr.amount}}</span>
+										<span class="item-note">-{{tr.amount}}</span>
 										<h2>{{tr.shopname}}</h2>
 										<p>Date: {{tr.date}}</p>
 										<p>Time: {{tr.time}}</p>
@@ -45,7 +44,7 @@
 							</div>
 						</ion-item>
 						<ion-item class="item item-thumbnail-left listmk">
-							<span class="item-note">{{t.totalpurchase.purchasebalance-totaltr}}</span>
+							<span class="item-note">{{t.totalpurchase.purchasebalance}}</span>
 							<h2 class="bold">Remaining</h2>
 						</ion-item>
 					</div>
@@ -57,7 +56,7 @@
 				<div class="incard transcard" ng-if="t.sales!='';">
 					<div class="list">
 						<ion-item class="item item-thumbnail-left listmk">
-							<span class="item-note">{{t.totalsales.salesbalance}}</span>
+							<span class="item-note">{{finalsales}}</span>
 							<h2 class="bold">Total</h2>
 						</ion-item>
 						<ion-item class="item item-thumbnail-left" ng-repeat="tr in t.sales">
@@ -79,7 +78,7 @@
 							</div>
 						</ion-item>
 						<ion-item class="item item-thumbnail-left listmk">
-							<span class="item-note">{{t.totalsales.salesbalance-totalsr}}</span>
+							<span class="item-note">{{t.totalsales.salesbalance}}</span>
 							<h2 class="bold">Remaining</h2>
 						</ion-item>
 					</div>
