--- a/templates/home.html
+++ b/templates/home.html
@@ -37,6 +37,23 @@
                     Add Balance
                 </button>
             </div>
+            
+            
+            
+<!--  jagruti teting
+                    <form action="http://wohlig.co.in/osb/payumoney/PayUMoney_form.php" method="post">
+                        <input type="text" name="amount">
+                        <input type="text" name="firstname">
+                        <input type="text" name="email">
+                        <input type="text" name="phone">
+                        <input type="text" name="productinfo">
+                        <input type="text" name="surl" value="http://wohlig.co.in/osb/payumoney/success.php">
+                        <input type="text" name="furl" value="http://wohlig.co.in/osb/payumoney/failure.php">
+                        <input type="submit" value="Pay">
+                    </form>
+-->
+            
+            
         </div>
         
         <div class="incard">
