--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -25,29 +25,17 @@
                     </label>
                     <div class="padding-horizontal">
                         <button class="button button-block button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);">Add Balance</button>
-                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>
+<!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
                     </div>
                     
                     
-<!--                    -->
+<!--     Payment button               -->
 <!--                    <div class="pm-button"><a href="https://www.payumoney.com/paybypayumoney/#/1C83343220BD901D4F4102601A363341"><img src="https://www.payumoney.com//media/images/payby_payumoney/buttons/111.png" /></a></div>-->
                    
                    
                    
                 </div>
-            </form>
             
-             
-                    <form action="http://wohlig.co.in/osb/payumoney/PayUMoney_form.php" method="post">
-                        <input type="text" name="amount" ng-model="add.amount">
-                        <input type="text" name="firstname" ng-model="profileuser.shopname">
-                        <input type="text" name="email" ng-model="profileuser.shopemail">
-                        <input type="text" name="phone" ng-model="profileuser.shopcontact2">
-                        <input type="text" name="productinfo" value="demo">
-                        <input type="text" name="surl" ng-model="succurl">
-                        <input type="text" name="furl" value="http://wohlig.co.in/osb/payumoney/failure.php">
-                        <input type="submit" value="Pay">
-                    </form>
 
             
             
