registration page, online and offline done

--- a/templates/home.html
+++ b/templates/home.html
@@ -68,6 +68,11 @@
                 <input type="text" placeholder="Enter Your Area">
             </label>
 -->
+           <div class="button-bar padding-horizontal">
+  <a class="button" ng-click="online()" ng-class="onlineclass">Online</a>
+  <a class="button" ng-click="offline()" ng-class="offlineclass">Offline</a>
+</div>
+        
             <label class="item item-input item-select area">
                 <div class="input-label">
                     Area
