--- a/templates/search.html
+++ b/templates/search.html
@@ -25,7 +25,6 @@
                 </ion-item>
             </ion-list>
         </div>
-
         <div class="incard">
             <ion-list class="lesspadding" ng-if="shops.length>0">
                 <ion-item class="headed">
@@ -36,7 +35,7 @@
                 </ion-item>
                 <ion-item href="#/app/shop/{{shop.id}}" ng-click="shopclick(shop);" ng-repeat="shop in shops ">
                     <div class="row">
-                        <div class="col prename">{{shop.name}}</div>
+                        <div class="col prename"><i class="icon ion-record icon-actived" ng-if=shop.onlinestatus==1></i>{{shop.name}}</div>
                         <div class="col"><span class="balanced amount">{{shop.sellbalance}}</span>
                         </div>
                     </div>
