--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,10 +23,10 @@
                 <ion-item nav-clear menu-close href="#/app/profile">
                     <span>My Profile</span>
                 </ion-item>
-<!--
-                <ion-item nav-clear menu-close href="#/app/balance" ng-click="yourbalance();">
-                    <span>Your Balance</span>
+                <ion-item nav-clear menu-close href="#/app/myproducts">
+                    <span>My Product</span>
                 </ion-item>
+<!--
                 <ion-item nav-clear menu-close href="#/app/addbalance" ng-click="yourbalance();">
                     <span>Add Balance</span>
                 </ion-item>
