--- a/templates/myproducts.html
+++ b/templates/myproducts.html
@@ -8,7 +8,7 @@
     <ion-content class="padding">
         <div class="incard" ng-if="products!=0">
             <div class="list">
-                <a class="item item-thumbnail-left bod-bottom" href="#">
+                <div class="item item-thumbnail-left bod-bottom" ng-click="openprdtdetails();">
                     <img src="img/icon.png">
                     <h2 class="leftname">Name: <span>XperiaZ</span></h2>
                     <h2 class="leftname">Price: <span>40000</span></h2>
