--- a/templates/addproducts.html
+++ b/templates/addproducts.html
@@ -38,7 +38,7 @@
                         <textarea placeholder="Description" ng-model="ap.description"></textarea>
                     </div>
                     <div class="padding">
-                <button class="button button-block button-assertive" ng-click="insertproduct();">Save</button>
+                <button class="button button-block button-assertive" ng-click="insertproduct(ap);">Save</button>
             </div>
                 </div>
             </form>
