--- a/templates/addproducts.html
+++ b/templates/addproducts.html
@@ -20,7 +20,7 @@
                         <input type="number" placeholder="Price" ng-model="ap.price">
                     </div>
                     <div class="item  item-input text-capitalize">
-                        <input type="number" placeholder="Quantity" ng-model="ap.name">
+                        <input type="number" placeholder="Quantity" ng-model="ap.quantity">
                     </div>
                     <div class="item  item-input text-capitalize">
                         <input type="text" placeholder="SKU" ng-model="ap.sku">
