--- a/templates/productdetails.html
+++ b/templates/productdetails.html
@@ -1,44 +1,58 @@
 <ion-modal-view view-title="Add Balance">
     <ion-header-bar class="bar-royal">
-        <h1 class="title">Add Product</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closeModal()">Close</button>
+            <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>
+        </div>
+        <h1 class="title">Product Details</h1>
+        <div class="buttons">
+            <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>
+             <a class="button button-icon ion-edit small-icon" ng-click="editpro(profile);" href="#/app/profile/edit"></a>
         </div>
     </ion-header-bar>
     <ion-content class="padding">
         <div class="incard">
-            <form ng-submit="">
-                <div class="list">
-                    <div class="profile-img" ng-click="changeprofileimage()">
-                        <img src="img/add.png">
-                        <div class="holder">Edit</div>
+            <div class="profile-img">
+                <img src="img/icon.png">
+                <h3>Xperia Z</h3>
+            </div>
+            <div class="list profile-cont padtop5">
+                <ion-item class="item-left">
+                    <h2>Price</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        40000
                     </div>
-                    <div class="item item-input text-capitalize">
-                        <input type="text" placeholder="Name">
+                </ion-item>
+
+                <ion-item class="item-left">
+                    <h2>Quantity</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        25
                     </div>
-                    <div class="item  item-input text-capitalize">
-                        <input type="number" placeholder="Price">
+                </ion-item>
+
+                <ion-item class="item-left">
+                    <h2>SKU</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        4984908
                     </div>
-                    <div class="item  item-input text-capitalize">
-                        <input type="number" placeholder="Quantity">
+                </ion-item>
+
+                <ion-item class="item-left">
+                    <h2>Status</h2>
+                    <div class="pull-right item-right text-capitalize">
+                        Available
                     </div>
-                    <div class="item  item-input text-capitalize">
-                        <input type="text" placeholder="SKU">
-                    </div>
-                    <div class="item item-toggle">
-                        Status
-                        <label class="toggle toggle-balanced">
-                            <input type="checkbox">
-                            <div class="track">
-                                <div class="handle"></div>
-                            </div>
-                        </label>
-                    </div>
-                    <div class="item  item-input text-capitalize">
-                        <textarea placeholder="Description"></textarea>
+                </ion-item>
+
+                <div class="item item-input item-text-wrap header">
+                    <h2>Description</h2>
+                </div>
+                <div class="item item-input item-text-wrap">
+                    <div class="input itemproducts">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </ion-content>
 </ion-modal-view>
