--- a/templates/productdetails.html
+++ b/templates/productdetails.html
@@ -5,8 +5,8 @@
         </div>
         <h1 class="title">Product Details</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>
-             <a class="button button-icon ion-edit small-icon" ng-click="editpro(profile);" href="#/app/profile/edit"></a>
+<!--            <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>-->
+             <a class="button button-icon ion-edit small-icon" ng-click="openprdtedit();"></a>
         </div>
     </ion-header-bar>
     <ion-content class="padding">
