--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="bar-royal">
         <h1 class="title">Product Details</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closeprdtdetails()">Close</button>
+            <button class="button button-clear" ng-click="closeprdtedit()">Close</button>
         </div>
     </ion-header-bar>
     <ion-content class="padding">
