--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -38,6 +38,10 @@
                     </div>
                 </div>
             </form>
+               <div class="padding">
+                <button class="button button-block button-balanced">Update</button>
+            </div>
+        </div>
         </div>
     </ion-content>
 </ion-modal-view>
