--- a/templates/myproducts.html
+++ b/templates/myproducts.html
@@ -8,16 +8,12 @@
     <ion-content class="padding">
         <div class="incard" ng-if="products!=0">
             <div class="list">
-                <div class="item item-thumbnail-left bod-bottom" ng-click="openprdtdetails();">
-                    <img src="img/icon.png">
-                    <h2 class="leftname">Name: <span>XperiaZ</span></h2>
-                    <h2 class="leftname">Price: <span>40000</span></h2>
-                    <a class="item item-thumbnail-left bod-bottom" href="#" ng-repeat="pro in products">
+                <div class="item item-thumbnail-left bod-bottom" ng-repeat="pro in products" ng-click="productdetails(pro.productid);openprdtdetails();">
                         <img ng-src="{{pro.image|serverimage}}">
                         <h2 class="leftname">Name: <span>{{pro.name}}</span></h2>
 
                         <h2 class="leftname">Price: <span>{{pro.price}}</span></h2>
-                    </a>
+                    
                     <!--
                 <a class="item item-thumbnail-left bod-bottom" href="#">
                     <img src="img/icon.png">
@@ -30,5 +26,6 @@
                 <button class="button button-block button-assertive" ng-click="openedit();">Add More Products</button>
             </div>
         </div>
+         </div>
     </ion-content>
 </ion-view>
