--- a/templates/menu.html
+++ b/templates/menu.html
@@ -26,11 +26,11 @@
                 <ion-item nav-clear menu-close href="#/app/myproducts">
                     <span>My Product</span>
                 </ion-item>
-<!--
-                <ion-item nav-clear menu-close href="#/app/addbalance" ng-click="yourbalance();">
-                    <span>Add Balance</span>
+                
+                <ion-item nav-clear menu-close href="#/app/order">
+                    <span>Orders</span>
                 </ion-item>
--->
+
                 <ion-item nav-clear menu-close href="#/app/selling">
                     <span>Selling Approvals</span>
                     <span ng-hide="approvalcount==0" class="badge badge-assertive">{{approvalcount}}</span>
