--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -1,6 +1,6 @@
 <ion-modal-view view-title="Add Balance">
     <ion-header-bar class="bar-royal">
-        <h1 class="title">Product Details</h1>
+        <h1 class="title">Edit Product</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeprdtedit()">Close</button>
         </div>
