--- a/templates/menu.html
+++ b/templates/menu.html
@@ -27,7 +27,7 @@
                     <span>My Product</span>
                 </ion-item>
                 
-                <ion-item nav-clear menu-close href="#/app/order">
+                <ion-item nav-clear menu-close href="#/app/orders">
                     <span>Orders</span>
                 </ion-item>
 
