--- a/templates/addproducts.html
+++ b/templates/addproducts.html
@@ -11,13 +11,13 @@
                 <div class="list">
                     <div class="profile-img" ng-click="changeprofileimage()">
                         <img src="img/add.png">
-                        <div class="holder">Edit</div>
+                        <div class="holder">Add Image</div>
                     </div>
                     <div class="item item-input text-capitalize">
                         <input type="text" placeholder="Name" ng-model="ap.name">
                     </div>
                     <div class="item  item-input text-capitalize">
-                        <input type="number" placeholder="Price" ng-model="ap.price">
+                        <input type="text" placeholder="Price" ng-model="ap.price">
                     </div>
                     <div class="item  item-input text-capitalize">
                         <input type="number" placeholder="Quantity" ng-model="ap.quantity">
