--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,19 +1,23 @@
 <ion-view view-title="My Orders">
+   <div class="centered" ng-if="ordr==0">No Orders.</div>{{ordr.length}}
     <ion-content class="padding">
-        <div class="incard" ng-if="products!=0">
+        <div class="incard" ng-if="ordr!=0">
             <div class="list">
+                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">
+<!--                    <img src="img/icon.png">-->
+                    <img ng-src="{{o.productimage|serverimage}}">
+                    <h2 class="leftnames">Name: <span>{{o.productname}}</span></h2>
+                    <h2 class="leftnames">Price: <span>{{o.price}}</span></h2>
+                    <h2 class="leftnames">Transaction ID: <span>{{o.transactionid}}</span></h2>
+                </div>
+<!--
                 <div class="item item-thumbnail-left bod-bottom">
                     <img src="img/icon.png">
                     <h2 class="leftnames">Name: <span>XperiaZ</span></h2>
                     <h2 class="leftnames">Price: <span>40000</span></h2>
                     <h2 class="leftnames">Transaction ID: <span>1234</span></h2>
                 </div>
-                <div class="item item-thumbnail-left bod-bottom">
-                    <img src="img/icon.png">
-                    <h2 class="leftnames">Name: <span>XperiaZ</span></h2>
-                    <h2 class="leftnames">Price: <span>40000</span></h2>
-                    <h2 class="leftnames">Transaction ID: <span>1234</span></h2>
-                </div>
+-->
             </div>
         </div>
     </ion-content>
