--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="incard">
-            <div class="header-card">Find shops</div>
+            <div class="header-card">Find shops & Products</div>
             <!--
             <label class="item item-input area">
                 <span class="input-label">Area</span>
