--- a/templates/productdetails.html
+++ b/templates/productdetails.html
@@ -37,6 +37,12 @@
                          {{prodetails.sku}}
                     </div>
                 </ion-item>
+                 <ion-item class="item-left">
+                    <h2>Category</h2>
+                    <div class="pull-right item-right text-capitalize">
+                         {{prodetails.categoryname}}
+                    </div>
+                </ion-item>
 
                 <ion-item class="item-left">
                     <h2>Status</h2>
