--- a/templates/myproducts.html
+++ b/templates/myproducts.html
@@ -6,7 +6,7 @@
     <ion-content class="padding">
         <div class="incard" ng-if="products!=0">
             <div class="list">
-                <div class="item item-thumbnail-left bod-bottom" ng-repeat="pro in products" ng-click="productdetails(pro.productid);openprdtdetails();">
+                <div class="item item-thumbnail-left bod-bottom" ng-repeat="pro in products" ng-click="productdetails(pro.id);openprdtdetails();">
                         <img ng-src="{{pro.image|serverimage}}">
                         <h2 class="leftname">Name: <span>{{pro.name}}</span></h2>
 
