--- a/templates/product.html
+++ b/templates/product.html
@@ -51,31 +51,18 @@
             <div class="header-card">Products</div>
             <div class="row productsCol">
                 <div class="col col-33 text-center">
+                       <a href="#/app/productdetail">
                     <img src="img/icon.png" class="full-image">
                     <h5>Xperia z</h5>
                     <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
+                     <a href="#/app/productdetail">
                     <img src="img/icon.png" class="full-image">
                     <h5>Xperia z</h5>
                     <h5>9000</h5>
-                </div>
-                <div class="col col-33 text-center">
-                    <img src="img/icon.png" class="full-image">
-                    <h5>Xperia z</h5>
-                    <h5>9000</h5>
-                </div>
-            </div>
-            <div class="row productsCol">
-                <div class="col col-33 text-center">
-                    <img src="img/icon.png" class="full-image">
-                    <h5>Xperia z</h5>
-                    <h5>9000</h5>
-                </div>
-                <div class="col col-33 text-center">
-                    <img src="img/icon.png" class="full-image">
-                    <h5>Xperia z</h5>
-                    <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
                     <img src="img/icon.png" class="full-image">
@@ -85,19 +72,48 @@
             </div>
             <div class="row productsCol">
                 <div class="col col-33 text-center">
-                    <img src="img/icon.png" class="full-image">
-                    <h5>Xperia z</h5>
-                    <h5>9000</h5>
+                    <a href="">
+                        <img src="img/icon.png" class="full-image">
+                        <h5>Xperia z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
-                    <img src="img/icon.png" class="full-image">
-                    <h5>Xperia z</h5>
-                    <h5>9000</h5>
+                    <a href="">
+                        <img src="img/icon.png" class="full-image">
+                        <h5>Xperia z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
-                    <img src="img/icon.png" class="full-image">
-                    <h5>Xperia z</h5>
-                    <h5>9000</h5>
+                    <a href="">
+                        <img src="img/icon.png" class="full-image">
+                        <h5>Xperia z</h5>
+                        <h5>9000</h5>
+                    </a>
+                </div>
+            </div>
+            <div class="row productsCol">
+                <a href="">
+                    <div class="col col-33 text-center">
+                        <img src="img/icon.png" class="full-image">
+                        <h5>Xperia z</h5>
+                        <h5>9000</h5>
+                </a>
+                </div>
+                <div class="col col-33 text-center">
+                    <a href="">
+                        <img src="img/icon.png" class="full-image">
+                        <h5>Xperia z</h5>
+                        <h5>9000</h5>
+                    </a>
+                </div>
+                <div class="col col-33 text-center">
+                    <a href="">
+                        <img src="img/icon.png" class="full-image">
+                        <h5>Xperia z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
             </div>
         </div>
